--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,13 +12,11 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
+$primary   : #363636
 $secondary : #26A69A
-$accent    : #9C27B0
-
-$dark      : #1D1D1D
+$accent    : #dd4b39
 
 $positive  : #21BA45
-$negative  : #C10015
+$negative  : #DB2828
 $info      : #31CCEC
 $warning   : #F2C037
